--- a/UE4SS/Korean/1. 개발 환경 구축하기.md
+++ b/UE4SS/Korean/1. 개발 환경 구축하기.md
@@ -21,17 +21,22 @@
 <pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">ssh-keygen -t ed25519 -C "your_email@example.com"</code></pre>
 </div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">명령어를 입력한 후, 별도 비밀번호를 설정하지 않고 절차가 끝날떄까지 Enter를 누릅니다.&nbsp;이제 사용자 계정 폴더로 들어가면, .ssh 폴더가 존재할 것입니다. .ssh 폴더 내부로 들어가면 확장자가 .pub인 파일이 있고, 확장자가 없으면서 확장자 .pub이 붙은 파일과 동일한 이름의 파일이 존재 할 것입니다. 여기서 .pub 파일을 메모장으로 열어서, 내부에 있는 문자열을 복사합니다. 이후 Github의 SSH 등록 링크로 이동합니다. <a href="https://github.com/settings/keys" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">SSH 등록 키 링크</a> SSH 등록키에서 New SSH Key 버튼을 누르고, 복사한 .pub의 내용을 붙여넣습니다. 이제, 다음의 명령어를 입력하고, "You've successfully authenticated"가 나오는지 확인합니다. 정상적으로 나온다면 성공입니다.</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
 <pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"># SSH 연결 테스트
 ssh -T git@github.com</code></pre>
 </div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이후, 모딩 데이터가 들어갈 디렉토리를 로컬 컴퓨터에 하나 생성하세요. 이 안내서에서는 <code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">MyMods</code>라는 이름으로 폴더를 생성했다고 가정하겠습니다. MyMods 폴더에 진입한 후, 다음 명령어를 Git Bash에 입력합니다.</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이후, 모딩 데이터가 들어갈 디렉토리를 로컬 컴퓨터에 하나 생성하세요. 이 안내서에서는&nbsp;<code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">MyMods</code>라는 이름으로 폴더를 생성했다고 가정하겠습니다. MyMods 폴더에 진입한 후, 다음 명령어를 Git Bash에 입력합니다.</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
 <pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">git clone git clone --branch v3.0.1 --recursive https://github.com/UE4SS-RE/RE-UE4SS.git</code></pre>
 </div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이렇게 하면 자동으로&nbsp; 연결된 Submodule까지 올바른 버전으로 가져옵니다. 가져오는 것이 끝났다면, 이제 다음 단계를 진행하기에 앞서, CMake와 Rust Toolchain을 설치합니다. 둘 다 최신버전으로 설치해도 문제는 일어나지 않겠지만, 마지막으로 확인한 동작 가능한 버전은 CMake가 3.26이었고, Rust Toolchain이 1.87이었습니다.</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이제 MyMods 폴더 내부에 모드의 소스코드가 들어갈 폴더를 만듭니다. 이 가이드에서는 <code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">MyAwesomeMod</code>로 만들었다고 가정합니다.</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">MyMods 폴더로 다시 돌아가서,&nbsp;<code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">CMakeLists.txt</code> 파일을 만들고, 아래 내용을 입력한 후 저장 합니다.</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
 <pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">cmake_minimum_required(VERSION 3.18)
 
@@ -40,7 +45,9 @@ project(MyMods)
 add_subdirectory(RE-UE4SS)
 add_subdirectory(MyAwesomeMod)</code></pre>
 </div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이후 MyAwesomeMod 폴더로 들어가서, 다음과 같은 내용의 <code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">CMakeLists.txt</code>파일을 만들고 저장합니다.</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이후 MyAwesomeMod 폴더로 들어가서, 다음과 같은 내용의&nbsp;<code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">CMakeLists.txt</code>파일을 만들고 저장합니다.</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
 <pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">cmake_minimum_required(VERSION 3.18)
 
@@ -51,7 +58,9 @@ add_library(${TARGET} SHARED "dllmain.cpp")
 target_include_directories(${TARGET} PRIVATE .)
 target_link_libraries(${TARGET} PUBLIC UE4SS)</code></pre>
 </div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">MyAwesomeMod 폴더 내부에 dllmain.cpp 폴더를 만들고, 아래 내용을 붙여 넣습니다.</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
 <pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">#include &lt;stdio.h&gt;
 #include &lt;Mod/CppUserModBase.hpp&gt;
@@ -95,4 +104,25 @@ extern "C"
     }
 }</code></pre>
 </div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이로서 솔루션과 모드를 빌드하기 위한 준비가 끝났습니다. 이제 실제로 솔루션을 만들고, 발생할 수 있는 오류에 대해서 살펴보겠습니다.</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이로서 솔루션과 모드를 빌드하기 위한 준비가 끝났습니다. 이제 실제로 솔루션을 만들고, 발생할 수 있는 오류에 대해서 살펴보겠습니다. 솔루션을 만들기 위해서는 다음의 두 프로그램을 설치해야 합니다.</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<ul style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">
+<li style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">CMake 3.24 이상</li>
+<li style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">Rust Toolchain 1.8 이상</li>
+</ul>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">&#8203;</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">두 프로그램의 설치가 끝났다면, 다음으로 할 일은 MyMods 폴더로 이동해서, 커맨드 프롬프트 창을 열고, 다음의 명령어를 입력합니다.</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">&#8203;</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">
+<pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">cmake -S .. -B .</code></pre>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">만약 솔루션 파일이 정상적으로 생성되었다면, 성공입니다. 솔루션 파일이 생성되지 않았고, 마지막 에러 메시지가 Rust Compiler를 찾을 수 없다는 말이거나 cargo를 찾을 수 없다는 말이면, 아래 명령어를 시도 해 보세요.</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
+<pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">cmake -S .. -B . -DRust_COMPILER="C:/Users/&lt;&lt;User Name&gt;&gt;/.cargo/bin/rustc.exe" -DRust_CARGO="C:/Users/&lt;&lt;User Name&gt;&gt;/.cargo/bin/cargo.exe"</code></pre>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이제 정상적으로 솔루션이 생성될 것입니다. 하지만 3.0.1 버전의 UE4SS에서, 모드를 빌드하기 위해서는 추가적인 절차가 필요합니다. 바로 Build를 돌려보면 여러 오류가 발생합니다. 하나씩 해결해 보도록 하겠습니다.</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+</div>
+</div>
