Update 1. 개발 환경 구축하기.md

--- a/UE4SS/Korean/1. 개발 환경 구축하기.md
+++ b/UE4SS/Korean/1. 개발 환경 구축하기.md
@@ -18,38 +18,39 @@
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">가장 먼저 할 일은 Epic Games 계정을 만드는 것입니다. Epic Games 계정이 이미 있거나, 아니면 생성하셨다면, 프로필 페이지에서 GIthub계정과 연동하여야 합니다. 연동을 하게 되면 이메일로 @EpicGames 깃헙 단체에 초대되고, 수락하면 Unreal Engine의 소스에 접근할 수 있습니다. 여기서 주의할 점은, 우리는 Unreal Engien의 최신 소스코드를 받는것이 아니라는 것입니다. 소스코드는 UE4SS에서 참조하는 버전의 코드를 사용해야 합니다.</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">위 절차가 완료되었다면 이제 Github에 SSH키를 등록해야 합니다. Command Prompt 창을 하나 열고, 아래 명령어를 입력합니다.</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
-<pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">ssh-keygen -t ed25519 -C "your_email@example.com"</code></pre>
+<pre class="language-markup" style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1;">ssh-keygen -t ed25519 -C "your_email@example.com"</code></pre>
 </div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">명령어를 입력한 후, 별도 비밀번호를 설정하지 않고 절차가 끝날떄까지 Enter를 누릅니다.&nbsp;이제 사용자 계정 폴더로 들어가면, .ssh 폴더가 존재할 것입니다. .ssh 폴더 내부로 들어가면 확장자가 .pub인 파일이 있고, 확장자가 없으면서 확장자 .pub이 붙은 파일과 동일한 이름의 파일이 존재 할 것입니다. 여기서 .pub 파일을 메모장으로 열어서, 내부에 있는 문자열을 복사합니다. 이후 Github의 SSH 등록 링크로 이동합니다. <a href="https://github.com/settings/keys" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">SSH 등록 키 링크</a> SSH 등록키에서 New SSH Key 버튼을 누르고, 복사한 .pub의 내용을 붙여넣습니다. 이제, 다음의 명령어를 입력하고, "You've successfully authenticated"가 나오는지 확인합니다. 정상적으로 나온다면 성공입니다.</div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
-<pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"># SSH 연결 테스트
+<pre class="language-markup" style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1;"># SSH 연결 테스트
 ssh -T git@github.com</code></pre>
 </div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이후, 모딩 데이터가 들어갈 디렉토리를 로컬 컴퓨터에 하나 생성하세요. 이 안내서에서는&nbsp;<code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">MyMods</code>라는 이름으로 폴더를 생성했다고 가정하겠습니다. MyMods 폴더에 진입한 후, 다음 명령어를 Git Bash에 입력합니다.</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
-<pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">git clone git clone --branch v3.0.1 --recursive https://github.com/UE4SS-RE/RE-UE4SS.git</code></pre>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
+<pre class="language-markup" style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1;">git clone --branch v3.0.1 --recursive https://github.com/UE4SS-RE/RE-UE4SS.git</code></pre>
 </div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이렇게 하면 자동으로&nbsp; 연결된 Submodule까지 올바른 버전으로 가져옵니다. 가져오는 것이 끝났다면, 이제 다음 단계를 진행하기에 앞서, CMake와 Rust Toolchain을 설치합니다. 둘 다 최신버전으로 설치해도 문제는 일어나지 않겠지만, 마지막으로 확인한 동작 가능한 버전은 CMake가 3.26이었고, Rust Toolchain이 1.87이었습니다.</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이제 MyMods 폴더 내부에 모드의 소스코드가 들어갈 폴더를 만듭니다. 이 가이드에서는 <code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">MyAwesomeMod</code>로 만들었다고 가정합니다.</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">MyMods 폴더로 다시 돌아가서,&nbsp;<code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">CMakeLists.txt</code> 파일을 만들고, 아래 내용을 입력한 후 저장 합니다.</div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
-<pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">cmake_minimum_required(VERSION 3.18)
+<pre class="language-markup" style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1;">cmake_minimum_required(VERSION 3.18)
 
 project(MyMods)
 
 add_subdirectory(RE-UE4SS)
 add_subdirectory(MyAwesomeMod)</code></pre>
+
 </div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이후 MyAwesomeMod 폴더로 들어가서, 다음과 같은 내용의&nbsp;<code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">CMakeLists.txt</code>파일을 만들고 저장합니다.</div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
-<pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">cmake_minimum_required(VERSION 3.18)
+<pre class="language-markup" style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1;">cmake_minimum_required(VERSION 3.18)
 
 set(TARGET MyAwesomeMod)
 project(${TARGET})
@@ -57,27 +58,28 @@ project(${TARGET})
 add_library(${TARGET} SHARED "dllmain.cpp")
 target_include_directories(${TARGET} PRIVATE .)
 target_link_libraries(${TARGET} PUBLIC UE4SS)</code></pre>
+
 </div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">MyAwesomeMod 폴더 내부에 dllmain.cpp 폴더를 만들고, 아래 내용을 붙여 넣습니다.</div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
-<pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">#include &lt;stdio.h&gt;
+<pre class="language-markup" style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="display: block; min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1;">#include &lt;stdio.h&gt;
 #include &lt;Mod/CppUserModBase.hpp&gt;
 
 class MyAwesomeMod : public RC::CppUserModBase
 {
 public:
-    MyAwesomeMod() : CppUserModBase()
-    {
-        ModName = STR("MyAwesomeMod");
-        ModVersion = STR("1.0");
-        ModDescription = STR("This is my awesome mod");
-        ModAuthors = STR("UE4SS Team");
-        // Do not change this unless you want to target a UE4SS version
-        // other than the one you're currently building with somehow.
-        //ModIntendedSDKVersion = STR("2.6");
-        
+MyAwesomeMod() : CppUserModBase()
+{
+ModName = STR("MyAwesomeMod");
+ModVersion = STR("1.0");
+ModDescription = STR("This is my awesome mod");
+ModAuthors = STR("UE4SS Team");
+// Do not change this unless you want to target a UE4SS version
+// other than the one you're currently building with somehow.
+//ModIntendedSDKVersion = STR("2.6");
+
         printf("MyAwesomeMod says hello\n");
     }
 
@@ -88,41 +90,52 @@ public:
     auto on_update() -&gt; void override
     {
     }
+
 };
 
-#define MY_AWESOME_MOD_API __declspec(dllexport)
+#define MY_AWESOME_MOD_API \_\_declspec(dllexport)
 extern "C"
 {
-    MY_AWESOME_MOD_API RC::CppUserModBase* start_mod()
-    {
-        return new MyAwesomeMod();
-    }
+MY_AWESOME_MOD_API RC::CppUserModBase\* start_mod()
+{
+return new MyAwesomeMod();
+}
 
     MY_AWESOME_MOD_API void uninstall_mod(RC::CppUserModBase* mod)
     {
         delete mod;
     }
+
 }</code></pre>
+
 </div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이로서 솔루션과 모드를 빌드하기 위한 준비가 끝났습니다. 이제 실제로 솔루션을 만들고, 발생할 수 있는 오류에 대해서 살펴보겠습니다. 솔루션을 만들기 위해서는 다음의 두 프로그램을 설치해야 합니다.</div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">​</div>
 <ul style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">
 <li style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">CMake 3.24 이상</li>
 <li style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">Rust Toolchain 1.8 이상</li>
 </ul>
-<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">&#8203;</div>
-<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">두 프로그램의 설치가 끝났다면, 다음으로 할 일은 MyMods 폴더로 이동해서, 커맨드 프롬프트 창을 열고, 다음의 명령어를 입력합니다.</div>
-<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">&#8203;</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">MSVC Version 14.42.34433</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">​</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">위 항목들 중에서 MSVC Version 14.42.34433버전의 경우에는 <code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">MSVCv143 - VS 2022 C++ x64/x86 빌드 도구(v14.42-17.12)</code>를 설치합니다. 최신 버전(2025-07-17 시점)은 14.44.35207이지만, 해당 버전은 Discord에 의하면, "Microsoft 쪽에서 무언가가 잘못 되었기 때문에" 솔루션으로 빌드를 할 수 없습니다.</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">​</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">두 프로그램의 설치가 끝났다면, 다음으로 할 일은 MyMods 폴더로 이동해서, 프로젝트 파일이 만들어질 폴더를 하나 생성합니다(예제에서는 MyBuilds라고 하겠습니다.). 그 다음, 해당 폴더 안으로 이동한 다음에 다음 명령어를 입력합니다.</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">cmake -S .. -B . -DRust_COMPILER="C:/Users/&lt;&lt;User Name&gt;&gt;/.cargo/bin/rustc.exe" -DRust_CARGO="C:/Users/&lt;&lt;User Name&gt;&gt;/.cargo/bin/cargo.exe" -T "v143,version=14.42.34433"</code></div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">​</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">&lt;&lt;User Name&gt;&gt; 부분에는 자신의 사용자 명을 입력합니다. 중간에 에러가 나더라도, 다시 실행 시키면 성공적으로 솔루션 파일을 생성합니다.</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">​</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">그런 다음, 생성된 솔루션을 열고 Unreal 프로젝트에서 UObject.hpp를 찾아서, <code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">namespace RC::Unreal</code> 내부에 다음과 같은 enum을 하나 선언합니다.</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">enum EAspectRatioAxisConstraint;</code></div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">그리고, 마지막으로 UE4SS 프로젝트와 MyAwesomeMod 프로젝트의 속성-링커-입력 파일에서, <code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">\defaultlib.mscrt</code>를 삭제합니다. 해당 입력은 CMake의 오류로 인해서 생성되는, 유효하지 않은 입력입니다.</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">​</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">마지막으로, <code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">._cargo-build_patternsleuth_bind</code>로 되어있는 곳의 <code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">CMakeLists.txt</code>를 엽니다. 그런 다음 맨 밑에 있는 코드를 다음 코드로 대체합니다.</div>
 <div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">
-<pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">cmake -S .. -B .</code></pre>
 <div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">만약 솔루션 파일이 정상적으로 생성되었다면, 성공입니다. 솔루션 파일이 생성되지 않았고, 마지막 에러 메시지가 Rust Compiler를 찾을 수 없다는 말이거나 cargo를 찾을 수 없다는 말이면, 아래 명령어를 시도 해 보세요.</div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">
-<pre class="language-markup" style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">cmake -S .. -B . -DRust_COMPILER="C:/Users/&lt;&lt;User Name&gt;&gt;/.cargo/bin/rustc.exe" -DRust_CARGO="C:/Users/&lt;&lt;User Name&gt;&gt;/.cargo/bin/cargo.exe"</code></pre>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">이제 정상적으로 솔루션이 생성될 것입니다. 하지만 3.0.1 버전의 UE4SS에서, 모드를 빌드하기 위해서는 추가적인 절차가 필요합니다. 바로 Build를 돌려보면 여러 오류가 발생합니다. 하나씩 해결해 보도록 하겠습니다.</div>
-<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;">&#8203;</div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">corrosion_import_crate(</code></div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><span style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0; white-space: normal;"><span style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0; white-space: pre;"> </span>MANIFEST_PATH ../../first/patternsleuth_bind/Cargo.toml</span></code></div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;"><span style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0; white-space: normal;"><span style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0; white-space: pre;"> </span>OUT_DIR ../../first</span></code></div>
+<div style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.0;"><code style="min-height: 1em; margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; line-height: 1.0;">)</code></div>
 </div>
-</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">​</div>
+<div style="margin: 0; padding: 0; min-height: 1em; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1;">이제 빌드를 수행하고, 빌드가 성공적으로 완료된다면 끝입니다!</div>
